# pyvarint

./: CHANGELOG.md  README.md  pyproject.toml  setup.cfg  tox.ini
pyvarint/: __init__.py  varint.py
test/: test_varint.py  test_version.py
